fixed alignment issues on partners logos

--- a/src/components/Partners/Partners.scss
+++ b/src/components/Partners/Partners.scss
@@ -3,8 +3,13 @@
   padding: 50px 0;
   img {
     max-width: 100%;
+    align-self: center;
   }
   li {
+    display: flex;
     padding: 0 15px;
+  }
+  .container-sm {
+    padding: 0;
   }
 }
